<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterScreen">

    <EditText
        android:id="@+id/newTxtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="142dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/newTxtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@+id/newTxtEmail"
        app:layout_constraintTop_toBottomOf="@+id/newTxtEmail" />

    <EditText
        android:id="@+id/confirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="numberPassword"
        app:layout_constraintStart_toStartOf="@+id/newTxtPassword"
        app:layout_constraintTop_toBottomOf="@+id/newTxtPassword" />

    <Button
        android:id="@+id/newBtnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>